--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -117,7 +117,8 @@
         <a href="/about" class="nav-text">About</a>
         <a href="/#pricing" class="nav-text">Pricing</a>
         <a href="/contact" class="nav-text" style="color: #667eea; font-weight: 600;">Contact</a>
-        <a href="/login" class="btn-login">Customer Login</a>
+        <a href="/login" class="nav-text">Login</a>
+        <a href="/signup" class="btn-login">Sign Up Free</a>
     </div>
 </nav>
 
