--- a/views/login.ejs
+++ b/views/login.ejs
@@ -105,7 +105,7 @@
         <a href="/about" class="nav-text">About</a>
         <a href="/#pricing" class="nav-text">Pricing</a>
         <a href="/contact" class="nav-text">Contact</a>
-        <a href="/signup" class="btn-login">Sign Up</a>
+        <a href="/signup" class="btn-login">Sign Up Free</a>
     </div>
 </nav>
 
