--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -113,7 +113,8 @@
         <a href="/about" class="nav-text">About</a>
         <a href="/#pricing" class="nav-text">Pricing</a>
         <a href="/contact" class="nav-text">Contact</a>
-        <a href="/login" class="btn-login">Customer Login</a>
+        <a href="/login" class="nav-text">Login</a>
+        <a href="/signup" class="btn-login">Sign Up Free</a>
     </div>
 </nav>
 
