Footer: Morti Pty Ltd with morti.com.au link

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -415,7 +415,7 @@
 </section>
 
 <footer>
-    <p>&copy; <%= new Date().getFullYear() %> Morti Projects &nbsp;·&nbsp; <a href="/about">About</a> &nbsp;·&nbsp; <a href="/contact">Contact</a> &nbsp;·&nbsp; <a href="/signup">Sign Up</a> &nbsp;·&nbsp; <a href="/login">Login</a></p>
+    <p>&copy; <%= new Date().getFullYear() %> Morti Projectscopy; <%= new Date().getFullYear() %> <a href="https://morti.com.au">Morti Pty Ltd</a> &nbsp;·&nbsp; <a href="/about">About</a> &nbsp;·&nbsp; <a href="/contact">Contact</a> &nbsp;·&nbsp; <a href="/signup">Sign Up</a> &nbsp;·&nbsp; <a href="/login">Login</a></p>
 </footer>
 
 </body>
