--- a/views/login.ejs
+++ b/views/login.ejs
@@ -139,7 +139,7 @@
 </div>
 
 <footer>
-    <p>&copy; <%= new Date().getFullYear() %> Morti Projects &nbsp;·&nbsp; <a href="/">Home</a> &nbsp;·&nbsp; <a href="/contact">Contact</a></p>
+    <p>&copy; <%= new Date().getFullYear() %> Morti Projectscopy; <%= new Date().getFullYear() %> <a href="https://morti.com.au">Morti Pty Ltd</a> &nbsp;·&nbsp; <a href="/">Home</a> &nbsp;·&nbsp; <a href="/contact">Contact</a></p>
 </footer>
 
 </body>
